--- a/playground/index.jade
+++ b/playground/index.jade
@@ -22,7 +22,8 @@ html
         font-size: 10px;
       }
       svg.stacked-radial path.layer {
-        stroke: none;
+        stroke: #fff;
+        stroke-width: 1;
       }
       svg.stacked-radial .axis line {
         stroke: #000;
