enabled rolling links

--- a/index.jade
+++ b/index.jade
@@ -27,10 +27,7 @@ html
 
         section
           section#what-is-d3
-            h2
-              | What is 
-              a(href='http://d3js.org/', target='_blank') D3.js
-              | ?
+            h2 What is D3.js?
             ul
               li Open source JavaScript library for manipulating documents based on data
               li Built for data visualization with web technologies (HTML, CSS, JavaScript)
@@ -464,7 +461,7 @@ html
     script
       Reveal.initialize({
         history: true,
-        rollingLinks: false,
+        // rollingLinks: false,
         dependencies: [
           {
             src: 'lib/highlight.js',
