pdf print stylesheet

--- a/index.jade
+++ b/index.jade
@@ -6,6 +6,7 @@ html
     meta(name='author', content='Scott Cheng')
     meta(name='description', content='Introductory D3.js')
     link(href='style.css', rel='stylesheet')
+    link(href='lib/pdf.css', rel='stylesheet', media='print')
     link(rel='canonical', href='http://scottcheng.github.com/d3js-101/')
   body
     .reveal
